--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Global CO2 Production from 1750-2019</title>
 </head>
 <body>
+<!-- embedded Tableau dashboard in the body tag-->
     <div class='tableauPlaceholder' id='viz1636736680073' style='position: relative'>
         <noscript>
             <a href='#'>
@@ -30,7 +31,17 @@
             </object>
     </div>                
     <script type='text/javascript'>                    
-        var divElement = document.getElementById('viz1636736680073');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1024px';vizElement.style.height='795px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1024px';vizElement.style.height='795px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+        var divElement = document.getElementById('viz1636736680073');                    
+        var vizElement = divElement.getElementsByTagName('object')[0];                    
+        if ( divElement.offsetWidth > 800 ) { 
+            vizElement.style.width='1024px';vizElement.style.height='795px';
+        } else if ( divElement.offsetWidth > 500 ) { 
+            vizElement.style.width='1024px';vizElement.style.height='795px';
+        } else { 
+            vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';
+        }                     
+        var scriptElement = document.createElement('script');                    
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
 </body>
